2007-02-07  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/testall.rb,
	  src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa_sdef.c,
	  src/rbosa.h,
	  src/rbosa_conv.c,
	  COPYRIGHT,
	  extconf.rb,
	  bin/rdoc-osa:
	Updated copyright date to 2007.

	* AUTHORS:
	Added Stefan.

2007-02-07  Stefan Saasen  <s@juretta.com>

	* sample/AddressBook_inspect.rb:
	New sample code, that prints all contacts in the Address Book.  

=== RubyOSA 0.2.0 ===

2007-02-01  Laurent Sansonetti  <lsansonetti@apple.com>

	* rubyosa.gemspec:
	Updated for 0.2.0.

2006-12-29  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa.c:
	- Made the UTF8 strings optional and disabled by default ;
	- Fixed the TIFF conversion to OSA ;
	- Handle application errors and convert them as Ruby exceptions.

	* sample/iTunes_control.rb,
	  sample/iTunes_inspect.rb:
	Activate UTF8 strings.

2006-12-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* NEWS:
	Revised for the next release.

	* src/lib/rbosa:
	Added 'class' to the list of reserved Ruby keywords to prefix when generating
	method parameters.

2006-12-27  Vincent Isambart  <vincent.isambart@gmail.com>

	* src/lib/rbosa.rb:
	- Fixed a bug when generating setter methods ;
	- Uses UTF8 strings by default.

2006-12-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* sample/TextEdit_hello_world.rb:
	Removed experimental code.

2006-12-07  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Suffix method names that are already registered with an integer value
	  instead of prefixing with 'osa_' as there might be more than 2 duplicates ;
	- Register the ID property if not already defined.

2006-11-20  Jean-Pierre M.  <jeanpierre@gmail.com>

	* sample/iTunes_artwork.rb:
	Use the artwork format as the temporary file extension.

2006-11-20  Laurent Sansonetti  <lsansonetti@apple.com>

	* README:
	Revised.

	* src/rbosa.c:
	Make sure to swap the data of 'type' coerced descriptors.

	* src/lib/rbosa.rb: